base update method implemented