@@ -1,16 +1,21 @@
 package io.bankmanagment.base.service;
 
 
-
 import io.bankmanagment.base.mapper.IBaseMapper;
 import io.bankmanagment.base.model.entity.BaseEntity;
 import io.bankmanagment.base.exception.NotFoundException;
 import io.bankmanagment.base.model.dto.BaseDto;
 import io.bankmanagment.base.repository.IBaseRepository;
+import org.springframework.beans.BeanUtils;
+import org.springframework.beans.BeanWrapper;
+import org.springframework.beans.BeanWrapperImpl;
 
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
-public class BaseService<T extends BaseEntity, GD extends BaseDto, PD extends BaseDto> implements IBaseService<T, GD, PD>{
+public class BaseService<T extends BaseEntity, GD extends BaseDto, PD extends BaseDto> implements IBaseService<T, GD, PD> {
     public IBaseRepository<T> baseRepository;
     public IBaseMapper<T, GD, PD> baseMapper;
 
@@ -25,8 +30,7 @@ public class BaseService<T extends BaseEntity, GD extends BaseDto, PD extends Ba
     }
 
     public List<GD> findAll() {
-        List<T> all = baseRepository.findAll();
-        return all.stream().map(baseMapper::entityToGetDto).toList();
+        return baseRepository.findAll().stream().map(baseMapper::entityToGetDto).collect(Collectors.toList());
     }
 
     public GD create(PD dto) {
@@ -34,12 +38,31 @@ public class BaseService<T extends BaseEntity, GD extends BaseDto, PD extends Ba
         return baseMapper.entityToGetDto(baseRepository.save(entity));
     }
 
-    public GD update(Long id, PD dto) throws NotFoundException {
-        T existed = baseRepository.findById(id).orElseThrow(NotFoundException::new);
-        return baseMapper.entityToGetDto(baseRepository.save(existed));
+    public GD update(PD dto) throws NotFoundException {
+        T saved = baseRepository.findById(dto.getId()).orElseThrow(NotFoundException::new);
+        copyNonNullProperties(dto, saved);
+        return baseMapper.entityToGetDto(baseRepository.save(saved));
     }
 
     public void deleteById(Long id) {
         baseRepository.deleteById(id);
+    }
+
+    public static void copyNonNullProperties(Object src, Object target) {
+        BeanUtils.copyProperties(src, target, getNullPropertyNames(src));
+    }
+
+
+    public static String[] getNullPropertyNames(Object source) {
+        final BeanWrapper src = new BeanWrapperImpl(source);
+        java.beans.PropertyDescriptor[] pds = src.getPropertyDescriptors();
+
+        Set<String> emptyNames = new HashSet<>();
+        for (java.beans.PropertyDescriptor pd : pds) {
+            Object srcValue = src.getPropertyValue(pd.getName());
+            if (srcValue == null) emptyNames.add(pd.getName());
+        }
+        String[] result = new String[emptyNames.size()];
+        return emptyNames.toArray(result);
     }
 }
